--- a/stacks/forgejo/compose.yaml
+++ b/stacks/forgejo/compose.yaml
@@ -15,7 +15,7 @@ services:
     image: codeberg.org/forgejo/forgejo:${forgejo_version:-13-rootless}
     container_name: forgejo
     user: ${uid:-1000}:${gid:-1000}
-    restart: always
+    restart: unless-stopped
     environment:
       USER_UID: ${uid:-1000}
       USER_GID: ${gid:-1000}
@@ -44,7 +44,7 @@ services:
     <<: *logging-policy
     image: postgres:${postgres_version:-14}
     container_name: forgejodb
-    restart: always
+    restart: unless-stopped
     environment:
       POSTGRES_USER: forgejo
       POSTGRES_PASSWORD: ${db_pass:-forgejo}
@@ -58,7 +58,7 @@ services:
     <<: *logging-policy
     image: gitea/act_runner:${runner_version:-nightly}
     container_name: forgejo_runner
-    restart: always
+    restart: unless-stopped
     depends_on:
       - forgejo
     environment:
