--- a/stacks/handbrake/compose.yaml
+++ b/stacks/handbrake/compose.yaml
@@ -13,7 +13,7 @@ services:
     <<: *logging-policy
     image: jlesage/handbrake:${handbrake_version:-latest}
     container_name: handbrake
-    restart: always
+    restart: unless-stopped
     networks:
       proxy: null
     environment:
