--- a/stacks/netbootxyz/compose.yaml
+++ b/stacks/netbootxyz/compose.yaml
@@ -13,7 +13,7 @@ services:
     <<: *logging-policy
     image: ghcr.io/netbootxyz/netbootxyz:${netbootxyz_version-latest}
     container_name: netbootxyz
-    restart: always
+    restart: unless-stopped
     networks:
       proxy: null
     healthcheck:
