add geoipfilter to reverse proxy

--- a/stacks/reverseproxy/example.env
+++ b/stacks/reverseproxy/example.env
@@ -15,14 +15,21 @@ timezone=Your/Timezone
 authelia_version=latest
 crowdsec_bouncer_version=latest
 crowdsec_version=latest
+geoip_version=latest
 lldap_version=latest
 traefik_version=latest
+
+# GeoIP filter settings
+country_codes=US
+filter=allow
+maxmind_id=your-account-id
+maxmind_key=your-license-key
+
+# LLDAP settings
+LLDAP_JWT_SECRET='a-secure-key-you-generated'
+LLDAP_KEY_SEED='a-secure-key-you-generated'
 
 # Traefik settings
 cf_dns_api_token=some-token1 # generate this token from cloudflare
 cs_api_key=some-key2 # generate this key from crowdsec
 TRAEFIK_DASHBOARD_CREDENTIALS='a-secure-hashed-password'
-
-# LLDAP settings
-LLDAP_JWT_SECRET='a-secure-key-you-generated'
-LLDAP_KEY_SEED='a-secure-key-you-generated'
