--- a/stacks/reverseproxy/compose.yaml
+++ b/stacks/reverseproxy/compose.yaml
@@ -65,6 +65,21 @@ services:
       - ${data:-.}/crowdsec/db:/var/lib/crowdsec/data/
       - ${data:-.}/crowdsec/config:/etc/crowdsec/
       - ${data:-.}/logs/traefik:/var/log/traefik/:ro
+  geoipfilter:
+    <<: *logging-policy
+    image: mpdcampbell/traefik-geoip-filter:${geoip_version:-latest}
+    container_name: geoipfilter
+    restart: unless-stopped
+    networks:
+      proxy:
+    environment:
+      MAXMIND_ID: ${maxmind_id:?}
+      MAXMIND_KEY: ${maxmind_key:?}
+      FILTER_TYPE: ${filter:-allow}
+      COUNTRY_CODES: ${country_codes:-US}
+      EXTRA_IPS: 10.0.0.0/8 172.16.0.0/12 192.168.0.0/16
+    volumes:
+      - ${data:-.}/geoip:/geoip
   lldap:
     <<: *logging-policy
     image: lldap/lldap:${lldap_version:-stable}
@@ -95,6 +110,7 @@ services:
     restart: unless-stopped
     depends_on:
       - authelia
+      - geoipfilter
     networks:
       proxy:
     ports:
@@ -115,6 +131,7 @@ services:
       traefik.enable: "true"
       traefik.http.middlewares.crowdsec-bouncer.forwardauth.address: "http://bouncer-traefik:8080/api/v1/forwardAuth"
       traefik.http.middlewares.crowdsec-bouncer.forwardauth.trustForwardHeader: true
+      traefik.http.middlewares.middlewares-geoipfilter.forwardAuth.address: http://geoipfilter:8080/traefik
       traefik.http.routers.traefik.entryPoints: "https"
       traefik.http.routers.traefik.middlewares: "localonly@file"
       traefik.http.routers.traefik.rule: "Host(`tf.${domain}`)"
