--- a/stacks/reverseproxy/compose.yaml
+++ b/stacks/reverseproxy/compose.yaml
@@ -114,9 +114,12 @@ services:
     networks:
       proxy:
     ports:
+      # Web Ports
       - "80:80/tcp"
       - "443:443/tcp"
       - "443:443/udp"
+      # Non Web Ports
+      - "25565:25565/tcp"
     environment:
       CF_DNS_API_TOKEN: ${cf_dns_api_token}
       TRAEFIK_DASHBOARD_CREDENTIALS: ${TRAEFIK_DASHBOARD_CREDENTIALS}
