--- a/stacks/reverseproxy/examples/dynamic.yml
+++ b/stacks/reverseproxy/examples/dynamic.yml
@@ -1,15 +1,27 @@
+localIPs: &localIPs
+  sourceRange:
+    - "10.0.0.0/8"
+    - "192.168.0.0/16"
+    - "172.16.0.0/12"
+allowedIPs: &allowedIPs
+  sourceRange:
+    - "10.0.0.0/8"
+    - "192.168.0.0/16"
+    - "172.16.0.0/12"
+    - "1.1.1.1/32"
 http:
   middlewares:
     localonly:
       ipAllowList:
-        sourceRange:
-          - "10.0.0.0/8"
-          - "192.168.0.0/16"
-          - "172.16.0.0/12"
+        <<: *localIPs
     allowedIPs:
       ipAllowList:
-        sourceRange:
-          - "10.0.0.0/8"
-          - "192.168.0.0/16"
-          - "172.16.0.0/12"
-          - "1.1.1.1/32" # Add or remove IP addresses as needed
+        <<: *allowedIPs
+tcp:
+  middlewares:
+    localonly:
+      ipAllowList:
+        <<: *localIPs
+    allowedIPs:
+      ipAllowList:
+        <<: *allowedIPs
