--- a/stacks/reverseproxy/example.env
+++ b/stacks/reverseproxy/example.env
@@ -20,6 +20,7 @@ lldap_version=latest
 traefik_version=latest
 
 # GeoIP filter settings
+block_status_code=418
 country_codes=US
 filter=allow
 maxmind_id=your-account-id
