--- a/stacks/reverseproxy/examples/traefik.yml
+++ b/stacks/reverseproxy/examples/traefik.yml
@@ -1,11 +1,12 @@
 accessLog:
-  filePath: "/var/log/traefik/access.log"
+  filePath: /var/log/traefik/access.log
   filters:
     statusCodes:
-      - "400-499"
-      - "500-599"
+      - 400-417
+      - 419-499
+      - 500-599
     retryAttempts: true
-    minDuration: "1000ms"
+    minDuration: 1000ms
 
 api:
   dashboard: true
