--- a/stacks/reverseproxy/compose.yaml
+++ b/stacks/reverseproxy/compose.yaml
@@ -135,7 +135,7 @@ services:
       traefik.enable: "true"
       traefik.http.middlewares.crowdsec-bouncer.forwardauth.address: "http://bouncer-traefik:8080/api/v1/forwardAuth"
       traefik.http.middlewares.crowdsec-bouncer.forwardauth.trustForwardHeader: true
-      traefik.http.middlewares.middlewares-geoipfilter.forwardAuth.address: http://geoipfilter:8080/traefik
+      traefik.http.middlewares.geoipfilter.forwardAuth.address: http://geoipfilter:8080/traefik
       traefik.http.routers.traefik.entryPoints: "https"
       traefik.http.routers.traefik.middlewares: "localonly@file"
       traefik.http.routers.traefik.rule: "Host(`tf.${domain}`)"
