--- a/stacks/reverseproxy/example.env
+++ b/stacks/reverseproxy/example.env
@@ -18,6 +18,7 @@ crowdsec_version=latest
 geoip_version=latest
 lldap_version=latest
 traefik_version=latest
+vector_version=latest-alpine
 
 # GeoIP filter settings
 block_status_code=418
