--- a/.github/workflows/validate-stacks-pr-main.yml
+++ b/.github/workflows/validate-stacks-pr-main.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Validate Stacks
         run: bash tests/validate_stacks.sh
 
-      - name: Create PR and Merge
+      - name: Create PR to Main
         uses: actions/github-script@v7
         with:
           github-token: ${{ secrets.PAT }}
@@ -33,16 +33,9 @@ jobs:
             const { data: pr } = await github.rest.pulls.create({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              title: 'Auto-merge: Dev to Main',
+              title: 'Merge: Dev to Main',
               head: 'dev',
               base: 'main',
               body: `## Latest Commit Message\n**${commitMessage}**\n\n---\n*Automated PR created after successful CI run*`
             });
 
-            // Auto-merge the PR
-            await github.rest.pulls.merge({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              pull_number: pr.number,
-              merge_method: 'merge'
-            });
