allow changing mode for bouncer

--- a/stacks/reverseproxy/example.env
+++ b/stacks/reverseproxy/example.env
@@ -20,6 +20,10 @@ lldap_version=latest
 traefik_version=latest
 vector_version=latest-alpine
 
+# Crowdsec bounder settings
+cs_api_key=some-key2 # generate this key from crowdsec
+gin_mode=debug
+
 # GeoIP filter settings
 block_status_code=418
 country_codes=US
@@ -33,5 +37,4 @@ LLDAP_KEY_SEED='a-secure-key-you-generated'
 
 # Traefik settings
 cf_dns_api_token=some-token1 # generate this token from cloudflare
-cs_api_key=some-key2 # generate this key from crowdsec
 TRAEFIK_DASHBOARD_CREDENTIALS='a-secure-hashed-password'
