--- a/stacks/reverseproxy/compose.yaml
+++ b/stacks/reverseproxy/compose.yaml
@@ -60,6 +60,7 @@ services:
     environment:
       CROWDSEC_BOUNCER_API_KEY: ${cs_api_key}
       CROWDSEC_AGENT_HOST: crowdsec:8080
+      GIN_MODE: ${gin_mode:-release}
   geoipfilter:
     <<: *logging-policy
     image: mpdcampbell/traefik-geoip-filter:${geoip_version:-latest}
