--- a/stacks/reverseproxy/example.env
+++ b/stacks/reverseproxy/example.env
@@ -23,6 +23,7 @@ vector_version=latest-alpine
 # Crowdsec bounder settings
 cs_api_key=some-key2 # generate this key from crowdsec
 gin_mode=debug
+trusted_proxies=172.16.0.0/12
 
 # GeoIP filter settings
 block_status_code=418
