use crowdsec bouncer plugin

--- a/stacks/reverseproxy/examples/traefik.yml
+++ b/stacks/reverseproxy/examples/traefik.yml
@@ -50,8 +50,8 @@ entryPoints:
         writeTimeout: 600s
     http:
       middlewares:
-        - geoipfilter@docker
-        - crowdsec-bouncer@docker
+        - geoipfilter@file
+        - crowdsec@file
       tls:
         certResolver: your-cert-provider
         domains:
@@ -62,6 +62,12 @@ entryPoints:
     address: :8082
   minecraft:
     address: :25565
+
+experimental:
+  plugins:
+    bouncer:
+      moduleName: github.com/maxlerebourg/crowdsec-bouncer-traefik-plugin
+      version: v1.4.7
 
 log:
   compress: true
