--- a/stacks/adguardhome/compose.yaml
+++ b/stacks/adguardhome/compose.yaml
@@ -2,19 +2,25 @@ networks:
   default: null
   proxy:
     external: true
-x-logging-policy: &logging-policy
+x-common-settings: &common-settings
   logging:
     driver: local
     options:
       max-size: "10m"
       max-file: "3"
       compress: "true"
+  security_opt:
+    - no-new-privileges:true
+  stdin_open: false
+  tty: false
 services:
   adguardhome:
-    <<: *logging-policy
+    <<: *common-settings
     image: adguard/adguardhome:${adguard_version:-latest}
     container_name: adguardhome
     restart: unless-stopped
+    cap_drop:
+      - ALL
     networks:
       default: null
       proxy: null
@@ -31,10 +37,12 @@ services:
       traefik.http.routers.adguardhome.rule: "Host(`ad.${domain}`)"
       traefik.http.services.adguardhome.loadbalancer.server.url: "http://adguardhome:3000"
   adguardhome-sync:
-    <<: *logging-policy
+    <<: *common-settings
     image: ghcr.io/bakito/adguardhome-sync:${adguard_sync_version:-latest}
     container_name: adguardhome-sync
     restart: unless-stopped
+    cap_drop:
+      - ALL
     networks:
       default: null
     environment:
