--- a/stacks/docs/compose.yaml
+++ b/stacks/docs/compose.yaml
@@ -2,20 +2,26 @@ networks:
   bookstack: null
   proxy:
     external: true
-x-logging-policy: &logging-policy
+x-common-settings: &common-settings
   logging:
     driver: local
     options:
       max-size: "10m"
       max-file: "3"
       compress: "true"
+  security_opt:
+    - no-new-privileges:true
+  stdin_open: false
+  tty: false
 services:
   # Wiki service
   bookstack:
-    <<: *logging-policy
+    <<: *common-settings
     image: lscr.io/linuxserver/bookstack:${bookstack_version:-latest}
     container_name: bookstack
     restart: unless-stopped
+    cap_drop:
+      - ALL
     depends_on:
       - bookstack_db
     networks:
@@ -43,10 +49,12 @@ services:
       traefik.http.routers.bookstack.rule: "Host(`wiki.${domain}`)"
       traefik.http.services.bookstack.loadbalancer.server.url: "http://bookstack:80"
   bookstack_db:
-    <<: *logging-policy
+    <<: *common-settings
     image: lscr.io/linuxserver/mariadb:${mariadb_version:-latest}
     container_name: bookstack_db
     restart: unless-stopped
+    cap_drop:
+      - ALL
     networks:
       bookstack: null
     environment:
@@ -63,6 +71,8 @@ services:
     image: binwiederhier/ntfy:${ntfy_version:-latest}
     container_name: ntfy
     restart: unless-stopped
+    cap_drop:
+      - ALL
     user: ${uid:-1000}:${gid:-1000}
     init: true
     command:
@@ -70,11 +80,15 @@ services:
     networks:
       proxy: null
     healthcheck:
-        test: ["CMD-SHELL", "wget -q --tries=1 http://localhost:80/v1/health -O - | grep -Eo '\"healthy\"\\s*:\\s*true' || exit 1"]
-        interval: 60s
-        timeout: 10s
-        retries: 3
-        start_period: 40s
+      test:
+        [
+          "CMD-SHELL",
+          "wget -q --tries=1 http://localhost:80/v1/health -O - | grep -Eo '\"healthy\"\\s*:\\s*true' || exit 1",
+        ]
+      interval: 60s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
     environment:
       TZ: ${timezone:-UTC}
       NTFY_BASE_URL: https://n.${domain}
@@ -95,15 +109,15 @@ services:
       traefik.http.services.ntfy.loadbalancer.server.url: "http://ntfy:80"
   # Metrics service
   grafana:
-    <<: *logging-policy
+    <<: *common-settings
     image: grafana/grafana:${grafana_version:-latest}
     container_name: grafana
     user: ${uid:-1000}:${gid:-1000}
     restart: unless-stopped
+    cap_drop:
+      - ALL
     depends_on:
       - prometheus
-    security_opt:
-      - no-new-privileges:true
     networks:
       proxy: null
     environment:
@@ -118,10 +132,12 @@ services:
       traefik.http.routers.grafana.rule: "Host(`gf.${domain}`)"
       traefik.http.services.grafana.loadbalancer.server.url: "http://grafana:3000"
   prometheus:
-    <<: *logging-policy
+    <<: *common-settings
     image: prom/prometheus:${prometheus_version:-latest}
     container_name: prometheus
     restart: unless-stopped
+    cap_drop:
+      - ALL
     networks:
       proxy: null
     volumes:
@@ -137,10 +153,12 @@ services:
 
   # Uptime service
   uptimekuma:
-    <<: *logging-policy
+    <<: *common-settings
     image: louislam/uptime-kuma:${uptimekuma_version:-latest}
     container_name: uptimekuma
     restart: unless-stopped
+    cap_drop:
+      - ALL
     networks:
       proxy: null
     volumes:
