--- a/stacks/forgejo/compose.yaml
+++ b/stacks/forgejo/compose.yaml
@@ -1,21 +1,27 @@
 networks:
   proxy:
     external: true
-x-logging-policy: &logging-policy
+x-common-settings: &common-settings
   logging:
     driver: local
     options:
       max-size: "10m"
       max-file: "3"
       compress: "true"
+  security_opt:
+    - no-new-privileges:true
+  stdin_open: false
+  tty: false
 
 services:
   forgejo:
-    <<: *logging-policy
+    <<: *common-settings
     image: codeberg.org/forgejo/forgejo:${forgejo_version:-13-rootless}
     container_name: forgejo
     user: ${uid:-1000}:${gid:-1000}
     restart: unless-stopped
+    cap_drop:
+      - ALL
     environment:
       USER_UID: ${uid:-1000}
       USER_GID: ${gid:-1000}
@@ -41,10 +47,12 @@ services:
       - /etc/timezone:/etc/timezone:ro
       - /etc/localtime:/etc/localtime:ro
   forgejodb:
-    <<: *logging-policy
+    <<: *common-settings
     image: postgres:${postgres_version:-14}
     container_name: forgejodb
     restart: unless-stopped
+    cap_drop:
+      - ALL
     environment:
       POSTGRES_USER: forgejo
       POSTGRES_PASSWORD: ${db_pass:-forgejo}
@@ -55,10 +63,12 @@ services:
       - ${data:-.}/db:/var/lib/postgresql/data
 
   runner:
-    <<: *logging-policy
+    <<: *common-settings
     image: gitea/act_runner:${runner_version:-nightly}
     container_name: forgejo_runner
     restart: unless-stopped
+    cap_drop:
+      - ALL
     depends_on:
       - forgejo
     environment:
