--- a/stacks/handbrake/compose.yaml
+++ b/stacks/handbrake/compose.yaml
@@ -1,19 +1,25 @@
 networks:
   proxy:
     external: true
-x-logging-policy: &logging-policy
+x-common-settings: &common-settings
   logging:
     driver: local
     options:
       max-size: "10m"
       max-file: "3"
       compress: "true"
+  security_opt:
+    - no-new-privileges:true
+  stdin_open: false
+  tty: false
 services:
   handbrake:
-    <<: *logging-policy
+    <<: *common-settings
     image: jlesage/handbrake:${handbrake_version:-latest}
     container_name: handbrake
     restart: unless-stopped
+    cap_drop:
+      - ALL
     networks:
       proxy: null
     environment:
