--- a/stacks/paperlessngx/compose.yaml
+++ b/stacks/paperlessngx/compose.yaml
@@ -2,28 +2,36 @@ networks:
   default: null
   proxy:
     external: true
-x-logging-policy: &logging-policy
+x-common-settings: &common-settings
   logging:
     driver: local
     options:
       max-size: "10m"
       max-file: "3"
       compress: "true"
+  security_opt:
+    - no-new-privileges:true
+  stdin_open: false
+  tty: false
 services:
   paperlessngx_broker:
-    <<: *logging-policy
+    <<: *common-settings
     image: eqalpha/keydb:${keydb_version:-latest}
     container_name: paperlessngx_broker
     restart: unless-stopped
+    cap_drop:
+      - ALL
     networks:
       default: null
     volumes:
       - ${data:-.}/keydb:/data
   paperlessngx_db:
-    <<: *logging-policy
+    <<: *common-settings
     image: docker.io/library/postgres:${postgres_version:-16}
     container_name: paperlessngx_db
     restart: unless-stopped
+    cap_drop:
+      - ALL
     networks:
       default: null
     volumes:
@@ -33,10 +41,12 @@ services:
       POSTGRES_USER: paperless
       POSTGRES_PASSWORD: ${db_pass:-paperless}
   paperlessngx:
-    <<: *logging-policy
+    <<: *common-settings
     image: ghcr.io/paperless-ngx/paperless-ngx:${paperlessngx_version:-latest}
     container_name: paperlessngx
     restart: unless-stopped
+    cap_drop:
+      - ALL
     networks:
       proxy: null
       default: null
