--- a/stacks/proxies/compose.yaml
+++ b/stacks/proxies/compose.yaml
@@ -2,19 +2,25 @@ networks:
   default:
     driver: bridge
     enable_ipv6: true
-x-logging-policy: &logging-policy
+x-common-settings: &common-settings
   logging:
     driver: local
     options:
       max-size: "10m"
       max-file: "3"
       compress: "true"
+  security_opt:
+    - no-new-privileges:true
+  stdin_open: false
+  tty: false
 services:
   gluetun-proxy:
-    <<: *logging-policy
+    <<: *common-settings
     image: qmcgaw/gluetun:${gluetun_version:-v3.40}
     container_name: gluetun-proxy
     restart: unless-stopped
+    cap_drop:
+      - ALL
     cap_add:
       - NET_ADMIN
     sysctls:
@@ -30,19 +36,23 @@ services:
     volumes:
       - ${data:-.}/gluetun-proxy:/gluetun:rw
   socks5proxy:
-    <<: *logging-policy
+    <<: *common-settings
     image: serjs/go-socks5-proxy:${socks5proxy_version:-latest}
     container_name: socks5proxy
     network_mode: service:gluetun-proxy
     restart: unless-stopped
+    cap_drop:
+      - ALL
     environment:
       REQUIRE_AUTH: ${enable_auth}
       PROXY_USER: ${proxy_user}
       PROXY_PASS: ${proxy_pass}
   tor-privoxy:
-    <<: *logging-policy
+    <<: *common-settings
     image: dockage/tor-privoxy:${tor_privoxy_version:-latest}
     container_name: tor-privoxy
     restart: unless-stopped
+    cap_drop:
+      - ALL
     ports:
       - "9050:9050/tcp"
