--- a/stacks/reverseproxy/compose.yaml
+++ b/stacks/reverseproxy/compose.yaml
@@ -2,19 +2,25 @@ networks:
   default:
   proxy:
     external: true
-x-logging-policy: &logging-policy
+x-common-settings: &common-settings
   logging:
     driver: local
     options:
       max-size: "10m"
       max-file: "3"
       compress: "true"
+  security_opt:
+    - no-new-privileges:true
+  stdin_open: false
+  tty: false
 services:
   authelia:
-    <<: *logging-policy
+    <<: *common-settings
     image: authelia/authelia:${authelia_version:-latest}
     container_name: authelia
     restart: unless-stopped
+    cap_drop:
+      - ALL
     depends_on:
       - lldap
     networks:
@@ -30,10 +36,12 @@ services:
       traefik.http.routers.authelia.entryPoints: "https"
       traefik.http.routers.authelia.rule: "Host(`auth.${domain}`)"
   crowdsec:
-    <<: *logging-policy
+    <<: *common-settings
     image: crowdsecurity/crowdsec:${crowdsec_version:-latest}
     container_name: crowdsec
     restart: unless-stopped
+    cap_drop:
+      - ALL
     networks:
       proxy:
     environment:
@@ -44,10 +52,12 @@ services:
       - ${data:-.}/crowdsec/config:/etc/crowdsec/
       - ${data:-.}/logs/crowdsec:/var/log:ro
   geoipfilter:
-    <<: *logging-policy
+    <<: *common-settings
     image: mpdcampbell/traefik-geoip-filter:${geoip_version:-latest}
     container_name: geoipfilter
     restart: unless-stopped
+    cap_drop:
+      - ALL
     networks:
       proxy:
     environment:
@@ -60,10 +70,12 @@ services:
     volumes:
       - ${data:-.}/geoip:/geoip
   lldap:
-    <<: *logging-policy
+    <<: *common-settings
     image: lldap/lldap:${lldap_version:-stable}
     container_name: lldap
     restart: unless-stopped
+    cap_drop:
+      - ALL
     networks:
       proxy:
     environment:
@@ -82,10 +94,12 @@ services:
       traefik.http.routers.lldap.rule: "Host(`lldap.${domain}`)"
       traefik.http.services.lldap.loadbalancer.server.url: 'http://lldap:17170'
   traefik:
-    <<: *logging-policy
+    <<: *common-settings
     image: traefik:${traefik_version:-v3.6}
     container_name: traefik
     restart: unless-stopped
+    cap_drop:
+      - ALL
     depends_on:
       - authelia
       - crowdsec
@@ -117,10 +131,12 @@ services:
       traefik.http.routers.traefik.service: "api@internal"
       traefik.http.services.traefik.loadbalancer.server.url: "http://traefik:8080"
   vector:
-    <<: *logging-policy
+    <<: *common-settings
     image: timberio/vector:${vector_version:-latest-alpine}
     container_name: vector
     restart: unless-stopped
+    cap_drop:
+      - ALL
     depends_on:
       - crowdsec
     networks:
