--- a/stacks/rustfs/compose.yaml
+++ b/stacks/rustfs/compose.yaml
@@ -1,20 +1,26 @@
 networks:
   proxy:
     external: true
-x-logging-policy: &logging-policy
+x-common-settings: &common-settings
   logging:
     driver: local
     options:
       max-size: "10m"
       max-file: "3"
       compress: "true"
+  security_opt:
+    - no-new-privileges:true
+  stdin_open: false
+  tty: false
 services:
   rustfs:
-    <<: *logging-policy
+    <<: *common-settings
     image: rustfs/rustfs:${rustfs_version:-latest}
     container_name: rustfs
     user: ${uid:-1000}:${gid:-1000}
     restart: unless-stopped
+    cap_drop:
+      - ALL
     command: --access-key ${default_access_key:?} --secret-key ${default_secret_key:?} /data
     networks:
       proxy:
