--- a/stacks/website/compose.yaml
+++ b/stacks/website/compose.yaml
@@ -3,20 +3,26 @@ networks:
   freshrss: null
   proxy:
     external: true
-x-logging-policy: &logging-policy
+x-common-settings: &common-settings
   logging:
     driver: local
     options:
       max-size: "10m"
       max-file: "3"
       compress: "true"
+  security_opt:
+    - no-new-privileges:true
+  stdin_open: false
+  tty: false
 services:
   mywebsite:
-    <<: *logging-policy
+    <<: *common-settings
     image: dellhplaptop/newwebsite:${mywebsite_version:-latest}
     container_name: mywebsite
     user: ${uid:-1000}:${gid:-1000}
     restart: unless-stopped
+    cap_drop:
+      - ALL
     networks:
       proxy:
     volumes:
@@ -28,10 +34,12 @@ services:
       traefik.http.routers.mywebsite.rule: "Host(`${domain}`) || Host(`www.${domain}`)"
       traefik.http.services.mywebsite.loadbalancer.server.url: "http://mywebsite:8080"
   freshrss:
-    <<: *logging-policy
+    <<: *common-settings
     image: freshrss/freshrss:${freshrss_version:-latest}
     container_name: freshrss
     restart: unless-stopped
+    cap_drop:
+      - ALL
     depends_on:
       - freshrssdb
     networks:
@@ -55,10 +63,12 @@ services:
       traefik.http.routers.freshrss.rule: "Host(`rss.${domain}`)"
       traefik.http.services.freshrss.loadbalancer.server.url: "http://freshrss:80"
   freshrssdb:
-    <<: *logging-policy
+    <<: *common-settings
     image: postgres:${postgres_version:-16}
     container_name: freshrssdb
     restart: unless-stopped
+    cap_drop:
+      - ALL
     networks:
       freshrss:
     volumes:
@@ -68,10 +78,12 @@ services:
       POSTGRES_USER: rss
       POSTGRES_PASSWORD: ${DB_PASSWORD}
   vaultwarden:
-    <<: *logging-policy
+    <<: *common-settings
     image: vaultwarden/server:${vaultwarden_version:-latest}
     container_name: vaultwarden
     restart: unless-stopped
+    cap_drop:
+      - ALL
     networks:
       proxy:
     environment:
@@ -86,10 +98,12 @@ services:
       traefik.http.routers.vaultwarden.rule: "Host(`vault.${domain}`)"
       traefik.http.services.vaultwarden.loadbalancer.server.url: "http://vaultwarden:80"
   homepage:
-    <<: *logging-policy
+    <<: *common-settings
     image: ghcr.io/gethomepage/homepage:${homepage_version:-latest}
     container_name: homepage
     restart: unless-stopped
+    cap_drop:
+      - ALL
     networks:
       proxy:
     environment:
@@ -105,11 +119,13 @@ services:
       traefik.http.routers.homepage.rule: "Host(`home.${domain}`)"
       traefik.http.services.homepage.loadbalancer.server.url: "http://homepage:3000"
   copyparty:
-    <<: *logging-policy
+    <<: *common-settings
     image: copyparty/iv:${copyparty_version:-latest}
     container_name: copyparty
     user: ${uid:-1000}:${gid:-1000}
     restart: unless-stopped
+    cap_drop:
+      - ALL
     networks:
       proxy:
     environment:
