--- a/stacks/reverseproxy/compose.yaml
+++ b/stacks/reverseproxy/compose.yaml
@@ -78,10 +78,9 @@ services:
     image: lldap/lldap:${lldap_version:-stable}
     container_name: lldap
     restart: unless-stopped
+    user: ${uid:-1000}:${gid:-1000}
     cap_drop:
       - ALL
-    cap_add:
-      - CHOWN
     networks:
       proxy:
     environment:
