--- a/stacks/adguardhome/compose.yaml
+++ b/stacks/adguardhome/compose.yaml
@@ -21,6 +21,9 @@ services:
     restart: unless-stopped
     cap_drop:
       - ALL
+    cap_add:
+      - NET_ADMIN
+      - NET_BIND_SERVICE
     networks:
       default: null
       proxy: null
