--- a/stacks/gitea/compose.yaml
+++ b/stacks/gitea/compose.yaml
@@ -21,6 +21,8 @@ services:
     restart: unless-stopped
     cap_drop:
       - ALL
+    cap_add:
+      - CHOWN
     depends_on:
       - giteadb
     environment:
@@ -51,6 +53,8 @@ services:
     restart: unless-stopped
     cap_drop:
       - ALL
+    cap_add:
+      - CHOWN
     environment:
       POSTGRES_DB: gitea
       POSTGRES_USER: gitea
@@ -66,6 +70,8 @@ services:
     restart: unless-stopped
     cap_drop:
       - ALL
+    cap_add:
+      - CHOWN
     depends_on:
       - gitea
     environment:
