--- a/stacks/immich/compose.yaml
+++ b/stacks/immich/compose.yaml
@@ -69,6 +69,9 @@ services:
     restart: unless-stopped
     cap_drop:
       - ALL
+    cap_add:
+      - SETGID
+      - SETUID
     networks:
       default: null
     volumes:
@@ -82,6 +85,8 @@ services:
     restart: unless-stopped
     cap_drop:
       - ALL
+    cap_add:
+      - CHOWN
     networks:
       default: null
     shm_size: 128mb
