--- a/stacks/proxies/compose.yaml
+++ b/stacks/proxies/compose.yaml
@@ -25,16 +25,18 @@ services:
       - NET_ADMIN
     sysctls:
       - net.ipv6.conf.all.disable_ipv6=0
+    ports:
+      - "1080:1080/tcp" # socks5 proxy
     environment:
       TZ: ${timezone:-UTC}
       VPN_SERVICE_PROVIDER: ${provider}
       VPN_TYPE: wireguard
       WIREGUARD_PRIVATE_KEY: ${wgkey}
       SERVER_CITIES: ${cities:-Stockholm}
-    ports:
-      - "1080:1080/tcp" # socks5 proxy
     volumes:
       - ${data:-.}/gluetun-proxy:/gluetun:rw
+    devices:
+      - /dev/net/tun:/dev/net/tun
   socks5proxy:
     <<: *common-settings
     image: serjs/go-socks5-proxy:${socks5proxy_version:-latest}
