--- a/stacks/website/compose.yaml
+++ b/stacks/website/compose.yaml
@@ -69,6 +69,8 @@ services:
     restart: unless-stopped
     cap_drop:
       - ALL
+    cap_add:
+      - CHOWN
     networks:
       freshrss:
     volumes:
