--- a/stacks/immich/compose.yaml
+++ b/stacks/immich/compose.yaml
@@ -87,6 +87,10 @@ services:
       - ALL
     cap_add:
       - CHOWN
+      - DAC_READ_SEARCH
+      - FOWNER
+      - SETGID
+      - SETUID
     networks:
       default: null
     shm_size: 128mb
