--- a/stacks/rxresume/compose.yaml
+++ b/stacks/rxresume/compose.yaml
@@ -23,6 +23,12 @@ services:
     restart: unless-stopped
     cap_drop:
       - ALL
+    cap_add:
+      - CHOWN
+      - DAC_READ_SEARCH
+      - FOWNER
+      - SETGID
+      - SETUID
     networks:
       default: null
     volumes:
