--- a/stacks/website/compose.yaml
+++ b/stacks/website/compose.yaml
@@ -71,6 +71,10 @@ services:
       - ALL
     cap_add:
       - CHOWN
+      - DAC_READ_SEARCH
+      - FOWNER
+      - SETGID
+      - SETUID
     networks:
       freshrss:
     volumes:
