--- a/stacks/paperlessngx/compose.yaml
+++ b/stacks/paperlessngx/compose.yaml
@@ -37,6 +37,10 @@ services:
       - ALL
     cap_add:
       - CHOWN
+      - DAC_READ_SEARCH
+      - FOWNER
+      - SETGID
+      - SETUID
     networks:
       default: null
     volumes:
