more perms to apps

--- a/stacks/gitea/compose.yaml
+++ b/stacks/gitea/compose.yaml
@@ -23,6 +23,8 @@ services:
       - ALL
     cap_add:
       - CHOWN
+      - SETGID
+      - SETUID
     depends_on:
       - giteadb
     environment:
