--- a/stacks/homeassistant/compose.yaml
+++ b/stacks/homeassistant/compose.yaml
@@ -97,6 +97,7 @@ services:
       - ALL
     cap_add:
       - CHOWN
+      - CAP_DAC_OVERRIDE
     networks:
       ha_mqtt:
     command: "mosquitto -c /mosquitto-no-auth.conf"
