--- a/stacks/paperlessngx/compose.yaml
+++ b/stacks/paperlessngx/compose.yaml
@@ -56,6 +56,8 @@ services:
     restart: unless-stopped
     cap_drop:
       - ALL
+    cap_add:
+      - CHOWN
     networks:
       proxy: null
       default: null
